--- a/Douglas1.html
+++ b/Douglas1.html
@@ -15,7 +15,15 @@
 			<li>addidas</li>
 			<li>reebook</li>
 		</ul> 
-  		<div
+  		<div>
+			<h1>Curry 3s</h1>
+			<p>very good shoes and nice</p>
+		</div> 	
+		<div>
+			<h1>Lebron 16s</h1>
+		</div>
+		
+		Copyright &copy;2019 Douglas	
 	</body>
 
 
